# anterviewer

./: .dockerignore  .gitattributes  .gitignore  Anterview_Project_Sign-Off.docx  CLAUDE.md  CONTRIBUTING.md  Caddyfile  README.md  dev-up.ps1  docker-compose.prod.yml  docker-compose.yml  render.yaml  restart-stack.ps1
services/admin_ops/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
services/admin_ops/app/: admin_auth.py  config.py  database.py  erasure_executor.py  main.py  models.py  s3_client.py
services/admin_ops/app/routers/: analytics.py  erasure.py  system.py
services/admin_ops/scripts/: grant_admin.py  verify_cloud_connectivity.py
services/admin_ops/tests/: test_admin_auth.py  test_analytics.py  test_erasure.py  test_erasure_executor.py  test_health.py
services/data_gateway/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  grant_admin.py  pyproject.toml  requirements.txt  uvicorn.err
services/data_gateway/alembic/: env.py
services/data_gateway/alembic/versions/: 20260527_0001_a1b2c3d4e5f6_initial_auth_tables.py  20260527_0418_eda3829ec95a_interview_data_model.py  20260528_0001_f9a2c1d3b4e7_dpdp_consent_partial_unique_index.py  20260529_0001_c7d8e9f0a1b2_erasure_audit_tables.py  20260529_0002_d8e9f0a1b2c3_scorecards_table.py  20260529_0003_e9f0a1b2c3d4_erasure_requests_security_fixes.py  20260529_0004_f0a1b2c3d4e5_interview_context_fields.py  20260529_0005_b2c3d4e5f6a1_resume_jd_columns.py  20260530_0001_c3d4e5f6a7b8_jobs_created_by_user_id.py  20260530_0002_d0e1f2a3b4c5_resumes_table.py  20260530_0003_e1f2a3b4c5d6_session_presenter_id.py  20260618_0001_f1a2b3c4d5e6_scorecard_rationale.py  20260618_0002_a2b3c4d5e6f7_integrity_events.py  20260620_0001_b3c4d5e6f7a8_hr_roles_companies.py  20260620_0002_c4d5e6f7a8b9_audit_log_append_only.py  20260620_0003_d5e6f7a8b9c0_applicants.py  20260622_0001_e6f7a8b9c0d1_mcq_exams.py  20260623_0001_a7b8c9d0e1f2_interview_invites.py  20260624_0001_f8a1b2c3d4e5_notifications.py  20260624_0002_a1c2e3f4b5d6_feature_flags.py  20260625_0001_b2d4f6a8c0e2_user_profile_fields.py  20260625_0002_c3e5f7a9b1d3_platform_owner_hierarchy.py  20260627_0001_a9c1e2f3b4d5_applicant_semantic_search.py  20260627_0002_b1d3f5a7c9e0_coding_exams.py  20260629_0001_c2e4a6b8d0f2_flexible_exam_structure.py  20260629_0002_d3f5a7b9c1e4_email_system.py  20260701_0001_e4f6a8b0c2d4_exam_submit_idempotency.py
services/data_gateway/app/: auth_tokens.py  coding_grader.py  config.py  database.py  dependencies.py  email_templates.py  email_util.py  embedding_client.py  exam_ai_client.py  exam_grading.py  exam_link.py  execution.py  health.py  interview_link.py  jdoodle_client.py  mailer.py  main.py  models.py  notifications_util.py  piston_client.py  rate_limit.py  redis_client.py  retention.py  s3_upload.py  scoring_client.py
services/data_gateway/app/naipunyam/: circuit_breaker.py  client.py
services/data_gateway/app/routers/: admin_hr.py  auth.py  consent.py  exam_take.py  hr_applicants.py  hr_coding.py  hr_exams.py  hr_interviews.py  hr_pipeline.py  hr_rounds.py  interview_take.py  jd.py  jobs.py  notifications.py  profile.py  resume.py  sso_google.py  sso_naipunyam.py
services/data_gateway/app/schemas/: __init__.py  consent.py  jobs.py
services/data_gateway/scripts/: seed_admin.py  seed_demo.py  seed_hr_enrich.py  verify_cloud_connectivity.py
services/data_gateway/tests/integration/: test_auth_endpoints.py  test_consent_router.py  test_jobs_endpoints.py  test_retention.py  test_sso_google.py  test_sso_naipunyam.py
services/data_gateway/tests/unit/: test_admin_hr.py  test_coding_grader.py  test_coding_security.py  test_exam_grading.py  test_exam_grading_fixes.py  test_exam_link.py  test_exam_round_take.py  test_exam_security.py  test_google_oauth.py  test_health.py  test_hr_applicants.py  test_hr_pipeline.py  test_interview_invite.py  test_interview_link.py  test_jd_upload.py  (+9 more)
services/interview_core/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  uvicorn.err
services/interview_core/app/: avatars.py  config.py  consent_guard.py  database.py  dependencies.py  health.py  main.py  models.py  proctoring.py  redis_client.py  s3.py  worker_capacity.py
services/interview_core/scripts/: _ic.err  _ic.out  _proof.txt  _reg.txt  _vd.txt  _wk.out  gemini_multiturn_check.py  proof_verify.py  proof_worker.py  run_demo.py  sarvam_stream_check.py  smoke_agent.py  tavus_setup.py  test_page.html  verify_cloud_connectivity.py  verify_dispatch.py
shared/: pyproject.toml  security.py
shared/auth/: __init__.py  base.py  factory.py  jwt.py  local.py
shared/auth/tests/: test_logout_all_toctou.py
shared/observability/: sentry.py
(+356 files in other folders)
