[tool.poetry]
name = "data-gateway"
version = "0.1.0"
description = "Auth (pluggable), user management, Naipunyam SSO bridge"
authors = ["Intants <support@intants.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.13"
apscheduler = "^3.10"
redis = "^5.2"
bcrypt = "^4.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}
httpx = "^0.27"
structlog = "^24.4"
shared = {path = "../../shared", develop = true}
pypdf = "^4.0"
aioboto3 = ">=13.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.7"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
# E501: line-too-long — consent router docstrings contain long description strings.
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../.."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
