[tool.poetry]
name = "interview-core"
version = "0.1.0"
description = "Voice interview WebSocket + LangGraph orchestrator + voice pipeline"
authors = ["Intants <support@intants.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
redis = "^5.2"
aioboto3 = ">=13.0"
anthropic = "^0.41"
httpx = "^0.27"
websockets = "^13.0"
structlog = "^24.4"
python-jose = {extras = ["cryptography"], version = "^3.3"}
langgraph = "^0.2"
langchain-core = "^0.3"
shared = {path = "../../shared", develop = true}
livekit = "^1.1.8"
livekit-api = "^1.1.0"
livekit-plugins-tavus = "1.5.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.7"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
# E501: line-too-long — D-ID adapter and WS test fixtures contain long URLs/
# docstring lines that are correct as-is. Formatting them would harm readability.
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../.."]
markers = [
    "integration: live external-service tests (hit real Gemini / Sarvam / etc.)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
